Fix Spacing
Compact view spacing fix.

--- a/assets/less/components/listing.less
+++ b/assets/less/components/listing.less
@@ -306,6 +306,7 @@
   justify-content: center;
   display: block;
   width: 100%;
+  padding: 2em 0 1.6em;
 
   &:not(.compact) {
     height: 140px;
